drbd-9.0.25-2/drbd/.compat_test.4.18.20/have_req_noidle.stderr
<command-line>:0:0: warning: "KBUILD_MODNAME" redefined
<command-line>:0:0: note: this is the location of the previous definition
/root/Code/All/drbd-9.0.25-2/drbd/drbd-kernel-compat/tests/have_req_noidle.c:4:13: error: ‘REQ_NOIDLE’ undeclared here (not in a function); did you mean ‘REQ_IDLE’?
 int dummy = REQ_NOIDLE;
             ^~~~~~~~~~
             REQ_IDLE
